apps/base/website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
      annotations:
        instrumentation.opentelemetry.io/inject-dotnet: "true"
    spec:
      containers:
        - name: website
          image: ghcr.io/oikz/website:5948b41fcbb402df6c49a22fdfcee4da20e44a7a
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /WeatherForecast
              port: 8080
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /WeatherForecast
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 3
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
