apps/base/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - port: 8080
  selector:
    app: website
