apps/base/website/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website
spec:
  entryPoints:
    - websecure
  routes:
    - match: ''
      kind: Rule
      services:
        - name: test-website
          port: 8080
